// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon Icon is large 1`] = `
<div>
  <span
    class="icon-wrapper"
    role="presentation"
  >
    <svg
      role="presentation"
      style="width: 24px; height: 24px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
        style="fill: currentColor;"
      />
    </svg>
  </span>
</div>
`;

exports[`Icon Icon is medium 1`] = `
<div>
  <span
    class="icon-wrapper"
    role="presentation"
  >
    <svg
      role="presentation"
      style="width: 20px; height: 20px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
        style="fill: currentColor;"
      />
    </svg>
  </span>
</div>
`;

exports[`Icon Icon is small 1`] = `
<div>
  <span
    class="icon-wrapper"
    role="presentation"
  >
    <svg
      role="presentation"
      style="width: 16px; height: 16px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
        style="fill: currentColor;"
      />
    </svg>
  </span>
</div>
`;

exports[`Icon Icon is xsmall 1`] = `
<div>
  <span
    class="icon-wrapper"
    role="presentation"
  >
    <svg
      role="presentation"
      style="width: 14px; height: 14px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
        style="fill: currentColor;"
      />
    </svg>
  </span>
</div>
`;

exports[`Icon Renders with the correct color 1`] = `
<div>
  <span
    class="icon-wrapper"
    role="presentation"
  >
    <svg
      role="presentation"
      style="width: 20px; height: 20px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
        style="fill: #666666;"
      />
    </svg>
  </span>
</div>
`;

exports[`Icon Renders without crashing 1`] = `
<div>
  <span
    class="icon-wrapper"
    role="presentation"
  >
    <svg
      role="presentation"
      style="width: 20px; height: 20px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
        style="fill: currentColor;"
      />
    </svg>
  </span>
</div>
`;
